[gd_scene load_steps=17 format=3 uid="uid://dbq0owupx1it8"]

[ext_resource type="Script" path="res://scenes/UI/end_scene.gd" id="1_kfxas"]
[ext_resource type="PackedScene" uid="uid://dk3sjkira5n7g" path="res://scenes/UI/sound_button.tscn" id="2_k3tem"]
[ext_resource type="PackedScene" uid="uid://b6ku2dcdgwbd5" path="res://scenes/component/random_audio_stream_player_component.tscn" id="2_sfj6q"]
[ext_resource type="AudioStream" uid="uid://bjc3qwhaiu34j" path="res://assets/audio/jingles_PIZZI07.ogg" id="3_35cl2"]
[ext_resource type="AudioStream" uid="uid://7pog1yjpdyxq" path="res://assets/audio/jingles_SAX03.ogg" id="4_7cedc"]
[ext_resource type="AudioStream" uid="uid://e0nvo7ex5p05" path="res://assets/audio/jingles_SAX07.ogg" id="5_orw4x"]
[ext_resource type="AudioStream" uid="uid://ck71rm1qsbkgj" path="res://assets/audio/jingles_SAX14.ogg" id="6_0cyd6"]
[ext_resource type="AudioStream" uid="uid://bvac3tnk0qb4c" path="res://assets/audio/jingles_STEEL01.ogg" id="7_jprgn"]
[ext_resource type="AudioStream" uid="uid://bbutd0pmlqdat" path="res://assets/audio/jingles_NES00.ogg" id="8_j4q2b"]
[ext_resource type="AudioStream" uid="uid://dxlvtffxwuts1" path="res://assets/audio/jingles_NES12.ogg" id="10_laht3"]
[ext_resource type="AudioStream" uid="uid://b408fiwife5sr" path="res://assets/audio/jingles_HIT01.ogg" id="11_rgmws"]
[ext_resource type="AudioStream" uid="uid://c4r48wtw1epry" path="res://assets/audio/jingles_HIT05.ogg" id="12_53yqc"]

[sub_resource type="Animation" id="Animation_xyat7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kg5fq"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eu8ur"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_24b7y"]
_data = {
"RESET": SubResource("Animation_xyat7"),
"in": SubResource("Animation_kg5fq"),
"out": SubResource("Animation_eu8ur")
}

[node name="EndScene" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_kfxas")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_24b7y")
}
autoplay = "in"

[node name="DefeatStreamPlayerComponent" parent="." instance=ExtResource("2_sfj6q")]
volume_db = -8.0
streams = Array[AudioStream]([ExtResource("3_35cl2"), ExtResource("4_7cedc"), ExtResource("5_orw4x"), ExtResource("6_0cyd6"), ExtResource("7_jprgn"), ExtResource("8_j4q2b")])

[node name="VictoryStreamPlayerComponent" parent="." instance=ExtResource("2_sfj6q")]
volume_db = -8.0
streams = Array[AudioStream]([ExtResource("10_laht3"), ExtResource("11_rgmws"), ExtResource("12_53yqc")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.219608, 0.207843, 0.333333, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
text = "胜利"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.219608, 0.207843, 0.333333, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "难以想象，你活了下来！"

[node name="ContinueButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_k3tem")]
unique_name_in_owner = true
layout_mode = 2
text = "继续！"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_k3tem")]
unique_name_in_owner = true
layout_mode = 2
text = "回到主界面"
